# mixin-python

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  a.go  build-linux.sh  build-mac.sh  index.md  install.sh  release.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tag.sh  test.sh
.github/workflows/: python-app.yml
configs/: mixin_config_helloworld.json
docs/: README.md  index.html  mixin_api.md  mixin_bot_api.md
examples/: bot_example.py  mixin_msg_test.py  send_message.py  transfer_to_user.py  transfer_to_users.py  ws_example.py
notebook/: helloworld.ipynb  mixin_bot_api.ipynb  testnet.ipynb
pysrc/: .gitignore  __init__.py  log.py  main.py  message_types.py  mixin_api.py  mixin_bot_api.py  mixin_config.py  mixin_msg_test.py  mixin_ws_api.py  testnet.py  utils.py
scripts/: download.py  get_whl_file.py  test_bench.sh  test_testnet.sh
src/: CMakeLists.txt  _mixin.pyx  check_modification.py
tests/: conftest.py  daemon.py  start_testnet.py  test_filter_multisig.py  test_mixin_api.py  test_mixin_bot_api.py  test_testnet.py  test_testnet2.py  unix_socket.go
